--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "semantic-ui-css": "^2.4.1",
+    "reactstrap": "^7.1.0",
     "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
